# FireWM

./: .gitignore  CMakeLists.txt  FoxBox.h  FoxString.h  LICENSE  Makefile  README  README.md  config.conf  config.def.h  config.h  config.mk  drw.c  dwm.1  dwm.c  firewm  firewm-api.c  firewm-msg  firewm-msg.c  firewm.c  firewmctl.c  firewmctl.h  log  util.h
dwm-bar/: dwm_bar.sh
dwm-bar/bar-functions/: dwm_battery.sh  dwm_currency.sh  dwm_date.sh  dwm_pulse.sh  dwm_weather.sh
example-configs/: README.md  example1.conf
screenshots/: README.md
src/: FoxBox.h  FoxString.h  IPCClient.h  config.h  drw.h  firewm.c  firewm.h  util.c  util.h  yajl_dumps.h
